// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report test coverage for only changed files 1`] = `
"Test Suites: 2 passed, 2 total
Tests:       2 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`report test coverage for only changed files 2`] = `
"

PASS __tests__/a.test.js
PASS __tests__/b.test.js"
`;

exports[`report test coverage for only changed files 3`] = `
"----------|----------|----------|----------|----------|----------------|
File      |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
----------|----------|----------|----------|----------|----------------|
All files |      100 |      100 |      100 |      100 |                |
 a.js     |      100 |      100 |      100 |      100 |                |
 b.js     |      100 |      100 |      100 |      100 |                |
----------|----------|----------|----------|----------|----------------|
"
`;

exports[`report test coverage for only changed files 4`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites related to changed files.
"
`;

exports[`report test coverage for only changed files 5`] = `
"PASS __tests__/a.test.js
  √ a

"
`;

exports[`report test coverage for only changed files 6`] = `
"----------|----------|----------|----------|----------|----------------|
File      |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
----------|----------|----------|----------|----------|----------------|
All files |      100 |      100 |      100 |      100 |                |
 a.js     |      100 |      100 |      100 |      100 |                |
----------|----------|----------|----------|----------|----------------|
"
`;
